--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,8 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
-# Dependency directories
+# Dependency 
+src/node_modules/
 node_modules/
 jspm_packages/
 
