--- a/functions/package.json
+++ b/functions/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "firebase-admin": "~6.0.0",
-    "firebase-functions": "^2.0.3",
-    "nodemailer": "^4.6.8"
+    "firebase-functions": "^2.0.3"
   },
   "private": true
 }
