--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-drag-scroll": "^9.0.0-beta.2",
     "node-sass": "^4.14.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "^6.1.4",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
