--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "format": "prettier --write .",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
