--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hammerjs": "^2.0.8",
     "ngx-drag-scroll": "^9.0.0-beta.2",
     "node-sass": "^4.14.1",
+    "prettier": "^2.2.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
