--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ngx-drag-scroll": "^9.0.0-beta.2",
-    "node-sass": "^4.14.1",
+    "sass": "^1.32.0",
     "prettier": "^2.2.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
