Pin RxJS to 6.3.3 for TypeScript 2.7 compatibility

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "ngx-drag-scroll": "^9.0.0-beta.2",
     "sass": "^1.32.0",
     "prettier": "^2.2.1",
-    "rxjs": "^6.0.0",
+    "rxjs": "6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
